RESOLVED FIXED 251059
[JSC] Resizable ArrayBuffer slice's end index should not be computed with updated byteLength
https://bugs.webkit.org/show_bug.cgi?id=251059
Summary [JSC] Resizable ArrayBuffer slice's end index should not be computed with upd...
Yusuke Suzuki
Reported 2023-01-23 19:12:42 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-23 19:12:58 PST
Yusuke Suzuki
Comment 2 2023-01-23 19:13:24 PST
Yusuke Suzuki
Comment 3 2023-01-23 19:14:56 PST
EWS
Comment 4 2023-01-23 20:10:26 PST
Committed 259260@main (a339b2fa21af): <https://commits.webkit.org/259260@main> Reviewed commits have been landed. Closing PR #9010 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.